force-app/main/default/objects/df_122_arvtagare_frst__c/df_122_arvtagare_frst__c.object-meta.xml
<CustomObject>
    <label>Arvtagare (först)</label>
    <nameField>
        <label>Arvtagare (först) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arvtagare (först)s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>