force-app/main/default/objects/df_122_arvtagare_frst__c/fields/arvsprocent_frstavlidne__c.field-meta.xml
<CustomField>
    <fullName>arvsprocent_frstavlidne__c</fullName>
    <label>Arvsprocent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>