force-app/main/default/objects/df_122_arvtagare_frst__c/fields/efternamn_frstavlidne__c.field-meta.xml
<CustomField>
    <fullName>efternamn_frstavlidne__c</fullName>
    <label>Efternamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>