force-app/main/default/objects/df_122_arvtagare_frst__c/fields/frnamn_frstavlidne__c.field-meta.xml
<CustomField>
    <fullName>frnamn_frstavlidne__c</fullName>
    <label>Förnamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>