force-app/main/default/objects/df_122_arvtagare_frst__c/fields/personnummer_frstavlidne__c.field-meta.xml
<CustomField>
    <fullName>personnummer_frstavlidne__c</fullName>
    <label>Personnummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>